Start correcting text overflow issue. Comments left in doc to guide work next session

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,10 @@ body {
     padding: 16px 16px 16px 16px;
     height: 80px;
     display: flex;
-    justify-content: space-between;}
+    justify-content: space-between;
+
+    text-overflow: ellipsis;
+}
 
 #pDisplay {
     text-align: right;
